--- a/index.html
+++ b/index.html
@@ -10,41 +10,49 @@
   </head>
   <body>
     
+<div class="all-content">
+  <div class="cards-container">
+    <div class="card">
+      <div class="front front-value ">
+          <div class="top-left">
+            <span class="top-icon icons top-left-icon">?</span>
+            <span class="number top-left-value">?</span>
+          </div>
+        <div class="bottom">
+          <div class="bottom-right">
+            <span class="number bottom-right-value">?</span>
+            <span class="bottom-icon icons bottom-right-icon">?</span>
+          </div>
+        </div>
+        <div class="number center">
+          <span class="center card-span">?</span> 
+        </div>
+      </div>
+      <div class="back">
+      </div>
+    </div>    
+  </div>  
+  
 
-    <div class="cards-container">
-      <div class="card">
-        <div class="front front-value">
-          <div class='top'>
-            <div class="top-left">
-              <span class="top-icon icons top-left-icon">?</span>
-              <span class="number top-left-value">?</span>
-            </div>
-          </div>
-          <div class="bottom">
-            <div class="bottom-right">
-              <span class="number bottom-right-value">?</span>
-              <span class="bottom-icon icons bottom-right-icon">?</span>
-            </div>
-          </div>
-          <div class="number center">
-            <span class="center card-span">?</span> 
-          </div>
-        </div>
-        <div class="back">
-        </div>
-      </div>    
-    </div>
+  <div class="buttons">
+      <div class="btn">
+          <button class="generate">Start...?</button>
+      </div>
+      <div class="btn">
+            <button class="btn-stop">Stop!</button>
+      </div>
+  </div>
+
+  <div class="input-width">
+    <input type="text" class="input-w" placeholder="Choose the width..(in px)">
+    <input type="text" class="input-h" placeholder="Choose the height..(in px)">
+  </div>
+  <div class="btn-input">
+    <button class="btn-size">Magic is Here</button>
+  </div>
+  <audio src="./The Joker Theme (Suicide Squad Soundtrack).mp3"></audio>
+</div>
     
-
-    <div class="buttons">
-        <div class="btn">
-            <button class="generate">Start Generator</button>
-        </div>
-        <div class="btn">
-              <button class="btn-stop">Stop Generator</button>
-        </div>
-    </div>
-    <audio src="The Joker Theme (Suicide Squad Soundtrack).mp3"></audio>
 
     <script src="app.js"></script>
   </body>
