--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="number center">
           <span class="center card-span">?</span> 
         </div>
+        <div class="front-img">
+          <img src="https://www.francetvinfo.fr/pictures/Cu__qpmVIbYBF7Hy--EsUqwPxYg/1200x900/2019/10/04/phpZM56E9.jpg" width="250" height="400" alt="">
+        </div>
       </div>
       <div class="back">
       </div>
